# keyx

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/keyx/: export.h  license.h  macros.h
keyx/: CMakeLists.txt  global.h  key.h  main.cpp
keyx/crypto/: base64.cpp  base64.h  base64_test.cpp  key.h  private_key.cpp  private_key.h  public_key.cpp  public_key.h  rsa.cpp  rsa.h
keyx/license/: license.cpp  license.h
keyx/signature/: signature.cpp  signature.h
src/: CMakeLists.txt
